<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1976D2"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <br.com.home.ui.components.DvdScreensaverView
            android:id="@+id/dvdScreensaverView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/border" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/sixteen_dp"
            android:text="@string/use_real_api"
            android:textColor="@color/white" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            android:textOff="@string/not"
            android:textOn="@string/yes" />

        <br.com.home.ui.components.ButtonWithProgressView
            android:id="@+id/buttonMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:layout_marginEnd="@dimen/sixteen_dp"
            app:buttonText="@string/find_message" />

    </LinearLayout>

</FrameLayout>
